Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h4 {
 }
 
 .indifferent {
-  box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
+  box-shadow:  -1px 1px #bab830, -2px 2px #bab830, -3px 3px #bab830, -4px 4px #bab830, -5px 5px #bab830;
   background-color: #dddd22;
 }
 
