--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h4 {
 }
 
 .dubious {
-  box-shadow:  -1px 1px #a33335, -2px 2px #a33335 -3px 3px #a33335, -4px 4px #a33335, -5px 5px #a33335;
+  box-shadow:  -1px 1px #a33335, -2px 2px #a33335, -3px 3px #a33335, -4px 4px #a33335, -5px 5px #a33335;
   background-color: #dd4444;
 }
 
