--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
-  background: #ffffff url("img_tree.png") no-repeat right top;
+  background: #ffffff url("../white-wood.jpg") no-repeat right top;
 }
 
 .container, h1 {
