Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
-  background: url("../images/white-wood.jpg") no-repeat right top;
+  background: url("../images/white-wood.jpg");
+  no-repeat right top;
 }
 
 .container, h1 {
