Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ body, html {
   display: block;
   text-align: center;
   background: url("../images/white-wood.jpg");
-  no-repeat right top;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container, h1 {
