--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body, html {
   text-align: center;
   background: url("../images/white-wood.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
 }
 
 .container, h1 {
