Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body, html {
   display: block;
   text-align: center;
   background: url("../images/white-wood.jpg") no-repeat center center fixed;
-  background-size: auto;
+  background-size: cover;
 }
 
 .container, h1 {
