--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
-  background: url("../images/white-wood.jpg") no-repeat center center fixed;
+  background: url("../images/white-wood.jpg") no-repeat center center;
   background-size: cover;
 }
 
