--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h4 {
 .dubious {
   box-shadow:  -1px 1px #a33335, -2px 2px #a33335, -3px 3px #a33335, -4px 4px #a33335, -5px 5px #a33335;
   background-color: #dd4444;
+  background: linear-gradient(to right, #8a8a15, #dd4444)
 }
 
 .column {
