--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ h4 {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
   background-color: #44cc66;
+  
+}
+
+h4.amiable{
   background: linear-gradient(to right, #15702c, #44cc66)
 }
 
